kubernetes/dev/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-cafe-deployment
  namespace: dev
  labels:
    app: cafe
    env: dev
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: cafe
      env: dev
  template:
    metadata:
      labels:
        app: cafe
        env: dev
    spec:
      containers:
        - name: cafe-ms
          image: 804475515851.dkr.ecr.us-east-1.amazonaws.com/cafe:latest
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 80
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: dev-cafe-application-config
