kubernetes/dev/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: dev
    app: cafe-ms
    layer: backend
  name: dev-cafe-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: cafe-ms
  ports:
    - name: api
      port: 80
      targetPort: 80
